Bug 1117579 - fullscreen broken on freeciv (throws with bogus requestFullScreen options); r=bz, a=sylvestre